--- a/articlehome.html
+++ b/articlehome.html
@@ -69,24 +69,30 @@
         <h1 style="text-align:center">Article</h1>
         <hr>
         <div class="col-md-4 mt-4">
-          <div class="articleh" style="height: 350px;">
-            <button class="btnnn" onclick="window.location.href='article4.html'" type="button" style="font-weight: bold; font-size: large;">August 6, 2022</button>
-          </div>
+          <button class="articlebtn" onclick="window.location.href='article4.html'" type="button">
+            <p class="art" style="font-weight: bold;">August 6, 2022</p>
+          </button>
         </div>
         <div class="col-md-4 mt-4">
-          <div class="articleh" style="height: 350px;">
-            <button class="btnnn" onclick="window.location.href='article3.html'" type="button" style="font-weight: bold; font-size: large;">August 6, 2022</button>
-          </div>
+          <button class="articlebtn" onclick="window.location.href='article3.html'" type="button">
+            <p class="art" style="font-weight: bold;">August 6, 2022</p>
+          </button>
         </div>
         <div class="col-md-4 mt-4">
-          <div class="articleh" style="height: 350px;">
-            <button class="btnnn" onclick="window.location.href='article2.html'" type="button" style="font-weight: bold; font-size: large;">August 3, 2022</button>
-          </div>
+          <button class="articlebtn" onclick="window.location.href='article2.html'" type="button">
+            <p class="art" style="font-weight: bold;">August 3, 2022</p>
+          </button>
         </div>
         <div class="col-md-4 mt-4">
+          <button class="articlebtn" onclick="window.location.href='article1.html'" type="button">
+            <p class="art" style="font-weight: bold;">July 31, 2022</p>
+          </button>
+        </div>
+        <!-- <div class="col-md-4 mt-4">
           <div class="articleh" style="height: 350px;">
-            <button class="btnnn" onclick="window.location.href='article1.html'" type="button" style="font-weight: bold; font-size: large;">July 31, 2022</button>
-          </div>
+            <button class="btnnn" onclick="window.location.href='article1.html'" type="button"
+              style="font-weight: bold; font-size: large;">July 31, 2022</button>
+          </div> -->
         </div>
       </div>
     </div>
@@ -103,7 +109,7 @@
   </footer>
   <script>
     const scrolltotop = document.querySelector("#scrolltotop");
-    scrolltotop.addEventListener("click", function() {
+    scrolltotop.addEventListener("click", function () {
 
       // $("html,").animate({scrollTop:0},"slow");
 
