--- a/musichome.html
+++ b/musichome.html
@@ -68,16 +68,14 @@
         <h1 style="text-align:center">Music</h1>
         <hr>
         <div class="col-md-4 mt-4">
-          <div class="musich" style="height: 350px;">
-            <button class="btnnn" onclick="window.location.href='music2.html'" type="button"
-              style="font-weight: bold; font-size: large;">August 6, 2022</button>
-          </div>
+          <button class="musicbtn" onclick="window.location.href='music2.html'" type="button">
+            <p class="art" style="font-weight: bold;">August 6, 2022</p>
+          </button>
         </div>
         <div class="col-md-4 mt-4">
-          <div class="musich" style="height: 350px;">
-            <button class="btnnn" onclick="window.location.href='music1.html'" type="button"
-              style="font-weight: bold; font-size: large;">August 3, 2022</button>
-          </div>
+          <button class="musicbtn" onclick="window.location.href='music1.html'" type="button">
+            <p class="art" style="font-weight: bold;">August 3, 2022</p>
+          </button>
         </div>
       </div>
     </div>
