--- a/articlehome.html
+++ b/articlehome.html
@@ -69,6 +69,11 @@
         <h1 style="text-align:center">Article</h1>
         <hr>
         <div class="col-md-4 mt-4">
+          <button class="articlebtn" onclick="window.location.href='article5.html'" type="button">
+            <p class="art" style="font-weight: bold;">August 18, 2022</p>
+          </button>
+        </div>
+        <div class="col-md-4 mt-4">
           <button class="articlebtn" onclick="window.location.href='article4.html'" type="button">
             <p class="art" style="font-weight: bold;">August 6, 2022</p>
           </button>
