--- a/article5.html
+++ b/article5.html
@@ -82,7 +82,7 @@
                     <p>其實打到這邊我也不知道我在說甚麼了，因為我現在好累</p>
                     <p>只能給大家看看我的課表，還有某堂課精美的選課人數</p>
                     <p style="font-weight: bold;">拜託抽到拉拜託</p>
-                    <img src="/assets/postimg/class.png" alt="">
+                    <img src="/assets/postimg/class.PNG" alt="class">
                 </div>
             </div>
         </div>
