--- a/article2.html
+++ b/article2.html
@@ -73,59 +73,108 @@
       </div>
     </nav>
   </header>
-    <main>
-        <div class="container">
-            <div class="row p-5 mt-5">
-                <h2 style="font-weight:bold;text-align:center ">第二篇Blog</h2>
-                <p class="pb-4" style="font-weight:bold;text-align:center">August 3, 2022</p>
-                <div class="blog">
-                    <p>
-                        最近幾天真的滿累的，本來想說實習才過了一半，應該還有時間可以慢慢處理我的data和train model
-                    </p>
-                    <p>結果因為離開前所有實習生都要做一個報告總結，所以月中就差不多要有結果</p>
-                    <p>
-                        所以我最近就瘋狂的處理TEJ和Bloomberg的資料，真的到公司上班後才發現資料庫有多麼珍貴，以前在學校都沒有好好用過
-                    </p>
+  <main>
+    <div class="container">
+      <div class="row p-5 mt-5">
+        <h2 style="font-weight:bold;text-align:center ">第二篇Blog</h2>
+        <p class="pb-4" style="font-weight:bold;text-align:center">August 3, 2022</p>
+        <div class="blog">
+          <p>
+            最近幾天真的滿累的，本來想說實習才過了一半，應該還有時間可以慢慢處理我的data和train model
+          </p>
+          <p>結果因為離開前所有實習生都要做一個報告總結，所以月中就差不多要有結果</p>
+          <p>
+            所以我最近就瘋狂的處理TEJ和Bloomberg的資料，真的到公司上班後才發現資料庫有多麼珍貴，以前在學校都沒有好好用過
+          </p>
 
-                    其中我覺得Bloomberg有夠麻煩，他會限制每天和每個月的流量，怕有人瘋狂下載資料讓伺服器變慢，但我又需要很大量的data
-                    </p>
-                    <p>所以一直到前天才決定好要用那些Features，一次下載好不要讓部門其他人沒得用</p>
-                    <p>
-                        本來想說bloomberg弄好應該已經完成一大半了，結果模型train一train又有麻煩的問題
-                    </p>
-                    <p>
-                        這又是另一個故事了，等過幾天有好消息再來講好ㄌ
-                    </p>
-                    <p>一樣附上香香的照片，今天是Suzy</p>
-                    <img src="/assets/postimg/suzy.PNG">
-                </div>
-            </div>
+          其中我覺得Bloomberg有夠麻煩，他會限制每天和每個月的流量，怕有人瘋狂下載資料讓伺服器變慢，但我又需要很大量的data
+          </p>
+          <p>所以一直到前天才決定好要用那些Features，一次下載好不要讓部門其他人沒得用</p>
+          <p>
+            本來想說bloomberg弄好應該已經完成一大半了，結果模型train一train又有麻煩的問題
+          </p>
+          <p>
+            這又是另一個故事了，等過幾天有好消息再來講好ㄌ
+          </p>
+          <p>一樣附上香香的照片，今天是Suzy</p>
+          <img src="/assets/postimg/suzy.PNG">
         </div>
-    </main>
-    <div class="col-md-3">
-        <button id="scrolltotop">
-            <i class="material-icons">arrow_upward</i>
-        </button>
+      </div>
+
+      <h3 style="font-weight:bold;text-align:center ">近期貼文</h3>
+      <div class="row p-5 mt-4">
+        <div class="col-md-4 mt-4">
+          <div class="wrapping">
+            <button class="articlebtn2" onclick="window.location.href='article4.html'" type="button"></button>
+            <div class="try">
+              <a href="article4.html" style="text-decoration: none; color:black">
+                <h2 class="title mt-3">第四篇Blog</h2>
+              </a>
+              <a href="article4.html" style="text-decoration: none; color:black">
+                <p class="short mx-3">正常來講是不會一天有兩篇文章的，但是我剛剛突然發現了驚人的事實&hellip;</p>
+              </a>
+              <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 6, 2022</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-4">
+          <div class="wrapping">
+            <button class="articlebtn2" onclick="window.location.href='article3.html'" type="button"></button>
+            <div class="try">
+              <a href="article3.html" style="text-decoration: none; color:black">
+                <h2 class="title mt-3">第三篇Blog</h2>
+              </a>
+              <a href="article3.html" style="text-decoration: none; color:black">
+                <p class="short mx-3">結果到現在還是沒有解決問題，training和validation的時候結果看起來都很正常&hellip;</p>
+              </a>
+              <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 6, 2022</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-4">
+          <div class="wrapping">
+            <button class="articlebtn2" onclick="window.location.href='article1.html'" type="button"></button>
+            <div class="try">
+              <a href="article1.html" style="text-decoration: none; color:black">
+                <h2 class="title mt-3">第一篇Blog</h2>
+              </a>
+              <a href="article1.html" style="text-decoration: none; color:black">
+                <p class="short mx-3">大家好，這是我的第一篇文章，最近其實算是水深火熱&hellip;</p>
+              </a>
+              <p class="date mx-3 mb-2"><span> Derek Fang</span> | July 29, 2022</p>
+            </div>
+          </div>
+        </div>
+        
+      </div>
     </div>
+  </main>
+  <div class="col-md-3">
+    <button id="scrolltotop">
+      <i class="material-icons">arrow_upward</i>
+    </button>
+  </div>
 
-    <footer class="p-3 mt-4 text-muted border-top" style="text-align:center;">
-        © 2022 KereDs
-    </footer>
-    <script>
-        const scrolltotop = document.querySelector("#scrolltotop");
-        scrolltotop.addEventListener("click", function () {
+  <footer class="p-3 mt-4 text-muted border-top" style="text-align:center;">
+    © 2022 KereDs
+  </footer>
+  <script>
+    const scrolltotop = document.querySelector("#scrolltotop");
+    scrolltotop.addEventListener("click", function () {
 
-            // $("html,").animate({scrollTop:0},"slow");
+      // $("html,").animate({scrollTop:0},"slow");
 
-            window.scrollTo({
-                top: 0,
-                left: 0,
-                behavior: "smooth"
-            });
-        });
-    </script>
+      window.scrollTo({
+        top: 0,
+        left: 0,
+        behavior: "smooth"
+      });
+    });
+  </script>
 
-    <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="/assets/dist/js/bootstrap.bundle.min.js"></script>
 
 
 </body>
