--- a/article3.html
+++ b/article3.html
@@ -88,6 +88,57 @@
                     <p style="font-weight: bold;">讓我心灰意冷的結果</p>
                 </div>
             </div>
+
+            <h3 style="font-weight:bold;text-align:center ">近期貼文</h3>
+            <div class="row p-5 mt-4">
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="articlebtn2" onclick="window.location.href='article5.html'"
+                            type="button"></button>
+                        <div class="try">
+                            <a href="article5.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">拖了好久沒更的文</h2>
+                            </a>
+                            <a href="article5.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">啊哈其實我是打算11號就要更這篇文的，只是我那時候懶得寫，一不小心&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 18, 2022</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="articlebtn2" onclick="window.location.href='article4.html'"
+                            type="button"></button>
+                        <div class="try">
+                            <a href="article4.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">第四篇Blog</h2>
+                            </a>
+                            <a href="article4.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">正常來講是不會一天有兩篇文章的，但是我剛剛突然發現了驚人的事實&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 6, 2022</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                      <button class="articlebtn2" onclick="window.location.href='article2.html'" type="button"></button>
+                      <div class="try">
+                        <a href="article2.html" style="text-decoration: none; color:black">
+                          <h2 class="title mt-3">第二篇Blog</h2>
+                        </a>
+                        <a href="article2.html" style="text-decoration: none; color:black">
+                          <p class="short mx-3">最近幾天真的滿累的，本來想說實習才過了一半，應該還有時間&hellip;</p>
+                        </a>
+                        <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 3, 2022</p>
+                      </div>
+                    </div>
+                  </div>
+
+            </div>
         </div>
     </main>
     <div class="col-md-3">
