--- a/article4.html
+++ b/article4.html
@@ -108,6 +108,57 @@
                     <p>不過是還沒看到，如果真的如我所想，那我做了兩個月只是在驗證別人的模型是錯的。</p>
                 </div>
             </div>
+
+            <h3 style="font-weight:bold;text-align:center ">近期貼文</h3>
+            <div class="row p-5 mt-4">
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                      <button class="articlebtn2" onclick="window.location.href='article5.html'" type="button"></button>
+                      <div class="try">
+                        <a href="article5.html" style="text-decoration: none; color:black">
+                          <h2 class="title mt-3">拖了好久沒更的文</h2>
+                        </a>
+                        <a href="article5.html" style="text-decoration: none; color:black">
+                          <p class="short mx-3">啊哈其實我是打算11號就要更這篇文的，只是我那時候懶得寫，一不小心&hellip;</p>
+                        </a>
+                        <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 18, 2022</p>
+                      </div>
+                    </div>
+                  </div>
+
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="articlebtn2" onclick="window.location.href='article3.html'"
+                            type="button"></button>
+                        <div class="try">
+                            <a href="article3.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">第三篇Blog</h2>
+                            </a>
+                            <a href="article3.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">結果到現在還是沒有解決問題，training和validation的時候結果看起來都很正常&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 6, 2022</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="articlebtn2" onclick="window.location.href='article2.html'"
+                            type="button"></button>
+                        <div class="try">
+                            <a href="article2.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">第二篇Blog</h2>
+                            </a>
+                            <a href="article2.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">最近幾天真的滿累的，本來想說實習才過了一半，應該還有時間&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 3, 2022</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                
         </div>
     </main>
     <div class="col-md-3">
