--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
             <li> 聽音樂</li>
             <li> 彈吉他 </li>
             <li> 玩電腦 </li>
-            <li> 籃球 </li>
+            <li> 打籃球 </li>
             <li>看韓劇 </li>
           </span>
 
