--- a/music1.html
+++ b/music1.html
@@ -68,7 +68,7 @@
         <div class="container">
             <div class="row p-5 mt-5">
                 <h2 style="font-weight:bold;text-align:center ">半島鐵盒</h2>
-                <p class="pb-4"style="font-weight:bold;text-align:center">August 3, 2022</p>
+                <p class="pb-4" style="font-weight:bold;text-align:center">August 3, 2022</p>
                 <div class="blog">
                     <p>我也不知道為甚麼要有這個分類，不過既然都做了就寫一下，感覺我隨時會把它拿掉</p>
                     <p>最近真的瘋狂聽周杰倫的歌，雖然新歌除了最偉大的作品外都沒聽，不過出新專輯算是又提醒我要回去複習以前的歌</p>
@@ -82,7 +82,25 @@
                     <p>所以大家趕快去聽<span style="font-weight:bold ;">半島鐵盒</span></p>
                     <p style="font-weight:bold ;">(下一篇高機率也是杰倫，除非我拖太久才寫)</p>
                     <!-- <iframe width="560" height="315" src="https://www.youtube.com/watch?v=FVT0zjKDU6I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
-                    <a href="https://www.youtube.com/watch?v=duZDsG3tvoA"><img src="/assets/postimg/half.jpg" alt="half"></a>
+                    <a href="https://www.youtube.com/watch?v=duZDsG3tvoA"><img src="/assets/postimg/half.jpg"
+                            alt="half"></a>
+                </div>
+            </div>
+            <h3 style="font-weight:bold;text-align:center ">近期貼文</h3>
+            <div class="row p-5 mt-4">
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="musicbtn2" onclick="window.location.href='music2.html'" type="button"></button>
+                        <div class="try">
+                            <a href="music2.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">退後</h2>
+                            </a>
+                            <a href="music2.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">這首歌從小時候就是我的最愛，一開始是被他的MV吸引&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 6, 2022</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
