--- a/music2.html
+++ b/music2.html
@@ -98,6 +98,21 @@
                     <a href="https://www.youtube.com/watch?v=0-4mm0e2h44"><img src="/assets/postimg/back.jpg" alt=""></a>
                 </div>
             </div>
+            <h3 style="font-weight:bold;text-align:center ">近期貼文</h3>
+            <div class="col-md-4 mt-4">
+                <div class="wrapping">
+                  <button class="musicbtn2" onclick="window.location.href='music1.html'" type="button"></button>
+                  <div class="try">
+                    <a href="music1.html" style="text-decoration: none; color:black">
+                      <h2 class="title mt-3">半島鐵盒</h2>
+                    </a>
+                    <a href="music1.html" style="text-decoration: none; color:black">
+                      <p class="short mx-3">我也不知道為甚麼要有這個分類，不過既然都做了就寫一下&hellip;</p>
+                    </a>
+                    <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 3, 2022</p>
+                  </div>
+                </div>
+              </div>
         </div>
     </main>
     <div class="col-md-3">
