--- a/musichome.html
+++ b/musichome.html
@@ -68,14 +68,33 @@
         <h1 style="text-align:center">Music</h1>
         <hr>
         <div class="col-md-4 mt-4">
-          <button class="musicbtn" onclick="window.location.href='music2.html'" type="button">
-            <p class="art" style="font-weight: bold;">August 6, 2022</p>
-          </button>
+          <div class="wrapping">
+            <button class="musicbtn2" onclick="window.location.href='music2.html'" type="button"></button>
+            <div class="try">
+              <a href="music2.html" style="text-decoration: none; color:black">
+                <h2 class="title mt-3">退後</h2>
+              </a>
+              <a href="music2.html" style="text-decoration: none; color:black">
+                <p class="short mx-3">這首歌從小時候就是我的最愛，一開始是被他的MV吸引&hellip;</p>
+              </a>
+              <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 6, 2022</p>
+            </div>
+          </div>
         </div>
+
         <div class="col-md-4 mt-4">
-          <button class="musicbtn" onclick="window.location.href='music1.html'" type="button">
-            <p class="art" style="font-weight: bold;">August 3, 2022</p>
-          </button>
+          <div class="wrapping">
+            <button class="musicbtn2" onclick="window.location.href='music1.html'" type="button"></button>
+            <div class="try">
+              <a href="music1.html" style="text-decoration: none; color:black">
+                <h2 class="title mt-3">半島鐵盒</h2>
+              </a>
+              <a href="music1.html" style="text-decoration: none; color:black">
+                <p class="short mx-3">我也不知道為甚麼要有這個分類，不過既然都做了就寫一下&hellip;</p>
+              </a>
+              <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 3, 2022</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
