--- a/article1.html
+++ b/article1.html
@@ -76,7 +76,8 @@
           <p>
             本來以為順利考上研究所後可以好好享受暑假，結果發現大家都太強了 不多花點時間充實自己只會離他們越來越遠。
           <p>
-            先來聊聊為甚麼會做這個網頁好了，最近下班後最常做的事就是看Youtube，某天我的YT首頁跳出了一位叫做<a href="https://www.youtube.com/c/devaslife/videos" style="color: black;">Takuya</a>的Indie app developer的影片
+            先來聊聊為甚麼會做這個網頁好了，最近下班後最常做的事就是看Youtube，某天我的YT首頁跳出了一位叫做<a href="https://www.youtube.com/c/devaslife/videos"
+              style="color: black;">Takuya</a>的Indie app developer的影片
           </p>
           <p>
             他的背景常常都是山林之類的大自然，整部影片沒有講話，就只有他電腦的程式畫面，外加很清脆的打字聲和潺潺流水
@@ -99,6 +100,54 @@
           <img src="/assets/postimg/iu.jpg">
         </div>
       </div>
+      <h3 style="font-weight:bold;text-align:center ">近期貼文</h3>
+      <div class="row p-5 mt-4">
+        <div class="col-md-4 mt-4">
+          <div class="wrapping">
+            <button class="articlebtn2" onclick="window.location.href='article4.html'" type="button"></button>
+            <div class="try">
+              <a href="article4.html" style="text-decoration: none; color:black">
+                <h2 class="title mt-3">第四篇Blog</h2>
+              </a>
+              <a href="article4.html" style="text-decoration: none; color:black">
+                <p class="short mx-3">正常來講是不會一天有兩篇文章的，但是我剛剛突然發現了驚人的事實&hellip;</p>
+              </a>
+              <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 6, 2022</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-4">
+          <div class="wrapping">
+            <button class="articlebtn2" onclick="window.location.href='article3.html'" type="button"></button>
+            <div class="try">
+              <a href="article3.html" style="text-decoration: none; color:black">
+                <h2 class="title mt-3">第三篇Blog</h2>
+              </a>
+              <a href="article3.html" style="text-decoration: none; color:black">
+                <p class="short mx-3">結果到現在還是沒有解決問題，training和validation的時候結果看起來都很正常&hellip;</p>
+              </a>
+              <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 6, 2022</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 mt-4">
+          <div class="wrapping">
+            <button class="articlebtn2" onclick="window.location.href='article2.html'" type="button"></button>
+            <div class="try">
+              <a href="article2.html" style="text-decoration: none; color:black">
+                <h2 class="title mt-3">第二篇Blog</h2>
+              </a>
+              <a href="article2.html" style="text-decoration: none; color:black">
+                <p class="short mx-3">最近幾天真的滿累的，本來想說實習才過了一半，應該還有時間&hellip;</p>
+              </a>
+              <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 3, 2022</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      
     </div>
   </main>
 
@@ -113,7 +162,7 @@
   </footer>
   <script>
     const scrolltotop = document.querySelector("#scrolltotop");
-    scrolltotop.addEventListener("click", function() {
+    scrolltotop.addEventListener("click", function () {
 
       // $("html,").animate({scrollTop:0},"slow");
 
