--- a/article5.html
+++ b/article5.html
@@ -15,7 +15,8 @@
     <link rel="icon" href="/assets/img/letter-d.png" type="image/icon type">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
 
     <link href="/assets/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -83,6 +84,57 @@
                     <p>只能給大家看看我的課表，還有某堂課精美的選課人數</p>
                     <p style="font-weight: bold;">拜託抽到拉拜託</p>
                     <img src="/assets/postimg/class.PNG" alt="class">
+                </div>
+            </div>
+
+            <h3 style="font-weight:bold;text-align:center ">近期貼文</h3>
+            <div class="row p-5 mt-4">
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="articlebtn2" onclick="window.location.href='article4.html'"
+                            type="button"></button>
+                        <div class="try">
+                            <a href="article4.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">第四篇Blog</h2>
+                            </a>
+                            <a href="article4.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">正常來講是不會一天有兩篇文章的，但是我剛剛突然發現了驚人的事實&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 6, 2022</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="articlebtn2" onclick="window.location.href='article3.html'"
+                            type="button"></button>
+                        <div class="try">
+                            <a href="article3.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">第三篇Blog</h2>
+                            </a>
+                            <a href="article3.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">結果到現在還是沒有解決問題，training和validation的時候結果看起來都很正常&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 6, 2022</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="articlebtn2" onclick="window.location.href='article2.html'"
+                            type="button"></button>
+                        <div class="try">
+                            <a href="article2.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">第二篇Blog</h2>
+                            </a>
+                            <a href="article2.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">最近幾天真的滿累的，本來想說實習才過了一半，應該還有時間&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 3, 2022</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
