--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
   </header>
 
   <main>
-    <div class="col-md-12 head" style="width: 100%;height: 940px;">
-        <h1 class="welcome" style="font-family:fantasy;">Welcome to my blog</h1>
+    <div class="col-md-12 head">
+      <h1 class="welcome" style="font-family:fantasy;">Welcome to my blog</h1>
     </div>
     <!-- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
