--- a/index.html
+++ b/index.html
@@ -38,19 +38,10 @@
             <li class="nav-item">
               <a class="nav-link text-black px-3" href="resume.html" style="font-weight: bold;">Resume</a>
             </li>
-            <li class="nav-item">
-              <p class="pt-2">|</p>
-            </li>
-            <li class="nav-item">
+            <li class="line nav-item">
               <a class="nav-link text-black px-3" href="articlehome.html" style="font-weight: bold;">Articles</a>
             </li>
-            <li class="nav-item">
-              <p class="pt-2">|</p>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link text-black px-3" href="#" style="font-weight: bold;">Project</a>
-            </li>
-            <li class="nav-item">
+            <!-- <li class="line nav-item">
               <p class="pt-2">|</p>
             </li> -->
             <li class="nav-item">
@@ -64,9 +55,10 @@
   </header>
 
   <main>
-    <div class="col-md-12 head">
-      <h1 class="welcome" style="font-family:fantasy;">Welcome to my blog</h1>
-    </div>
+      <div class="head">
+        <h1 class="welcome" style="font-family:fantasy;">Welcome to my blog</h1>
+      </div>
+ 
     <!-- <div id="myCarousel" class="carousel slide" data-bs-ride="carousel">
       <div class="carousel-indicators">
         <button type="button" data-bs-target="#myCarousel" data-bs-slide-to="0" class="active" aria-current="true"
