--- a/music1.html
+++ b/music1.html
@@ -45,14 +45,8 @@
                             <a class="nav-link text-black px-3" href="resume.html" style="font-weight: bold;">Resume</a>
                         </li>
                         <li class="nav-item">
-                            <p class="pt-2">|</p>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-black px-3" href="articlehome.html"
                                 style="font-weight: bold;">Articles</a>
-                        </li>
-                        <li class="nav-item">
-                            <p class="pt-2">|</p>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-black px-3" href="musichome.html"
@@ -88,6 +82,22 @@
             </div>
             <h3 style="font-weight:bold;text-align:center ">近期貼文</h3>
             <div class="row p-5 mt-4">
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="musicbtn2" onclick="window.location.href='remember_you.html'"
+                            type="button"></button>
+                        <div class="try">
+                            <a href="remember_you.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">Remember You</h2>
+                            </a>
+                            <a href="remember_you.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">這首是我最喜歡的吉他手-日本的伍伍慧(Satoshi Gogo)的曲子&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 21, 2022</p>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-md-4 mt-4">
                     <div class="wrapping">
                         <button class="musicbtn2" onclick="window.location.href='music2.html'" type="button"></button>
