--- a/music2.html
+++ b/music2.html
@@ -45,14 +45,8 @@
                             <a class="nav-link text-black px-3" href="resume.html" style="font-weight: bold;">Resume</a>
                         </li>
                         <li class="nav-item">
-                            <p class="pt-2">|</p>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-black px-3" href="articlehome.html"
                                 style="font-weight: bold;">Articles</a>
-                        </li>
-                        <li class="nav-item">
-                            <p class="pt-2">|</p>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-black px-3" href="musichome.html"
@@ -68,7 +62,7 @@
         <div class="container">
             <div class="row p-5 mt-5">
                 <h2 style="font-weight:bold;text-align:center ">退後</h2>
-                <p class="pb-4"style="font-weight:bold;text-align:center">August 6, 2022</p>
+                <p class="pb-4" style="font-weight:bold;text-align:center">August 6, 2022</p>
                 <div class="blog">
                     <p>這首歌從小時候就是我的最愛</p>
                     <p>一開始是被他的MV吸引，周杰倫在裡面是演一個8+9</p>
@@ -92,27 +86,46 @@
                     <p>某天杰倫一樣在市場賣飲料的時候，有個小孩來找他買飲料</p>
                     <p>好巧不巧就是Hebe的兒子，他們還對到了眼</p>
                     <p>所以MV的最後一句話就是<span style="font-weight:bold ;">「我已經變了，但也已經來不及了」</span></p>
-                    <p>整部MV的看點大概就是杰倫很會裝逼，Hebe超正><</p>
-                    <p>還有最後的<span style="font-weight:bold ;">好過</span>兩個字杰倫直接用真音，超屌</p>
-                    <p>只是他以前聲音還很棒的時候好像也沒有在演唱會這樣做過，有的話拜託跟我說</p>
-                    <a href="https://www.youtube.com/watch?v=0-4mm0e2h44"><img src="/assets/postimg/back.jpg" alt=""></a>
+                    <p>整部MV的看點大概就是杰倫很會裝逼，Hebe超正>< </p>
+                            <p>還有最後的<span style="font-weight:bold ;">好過</span>兩個字杰倫直接用真音，超屌</p>
+                            <p>只是他以前聲音還很棒的時候好像也沒有在演唱會這樣做過，有的話拜託跟我說</p>
+                            <a href="https://www.youtube.com/watch?v=0-4mm0e2h44"><img src="/assets/postimg/back.jpg"
+                                    alt=""></a>
                 </div>
             </div>
             <h3 style="font-weight:bold;text-align:center ">近期貼文</h3>
-            <div class="col-md-4 mt-4">
-                <div class="wrapping">
-                  <button class="musicbtn2" onclick="window.location.href='music1.html'" type="button"></button>
-                  <div class="try">
-                    <a href="music1.html" style="text-decoration: none; color:black">
-                      <h2 class="title mt-3">半島鐵盒</h2>
-                    </a>
-                    <a href="music1.html" style="text-decoration: none; color:black">
-                      <p class="short mx-3">我也不知道為甚麼要有這個分類，不過既然都做了就寫一下&hellip;</p>
-                    </a>
-                    <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 3, 2022</p>
-                  </div>
+            <div class="row p-5 mt-4">
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="musicbtn2" onclick="window.location.href='remember_you.html'"
+                            type="button"></button>
+                        <div class="try">
+                            <a href="remember_you.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">Remember You</h2>
+                            </a>
+                            <a href="remember_you.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">這首是我最喜歡的吉他手-日本的伍伍慧(Satoshi Gogo)的曲子&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 21, 2022</p>
+                        </div>
+                    </div>
                 </div>
-              </div>
+
+                <div class="col-md-4 mt-4">
+                    <div class="wrapping">
+                        <button class="musicbtn2" onclick="window.location.href='music1.html'" type="button"></button>
+                        <div class="try">
+                            <a href="music1.html" style="text-decoration: none; color:black">
+                                <h2 class="title mt-3">半島鐵盒</h2>
+                            </a>
+                            <a href="music1.html" style="text-decoration: none; color:black">
+                                <p class="short mx-3">我也不知道為甚麼要有這個分類，不過既然都做了就寫一下&hellip;</p>
+                            </a>
+                            <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 3, 2022</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <div class="col-md-3">
