--- a/musichome.html
+++ b/musichome.html
@@ -45,13 +45,7 @@
               <a class="nav-link text-black px-3" href="resume.html" style="font-weight: bold;">Resume</a>
             </li>
             <li class="nav-item">
-              <p class="pt-2">|</p>
-            </li>
-            <li class="nav-item">
               <a class="nav-link text-black px-3" href="articlehome.html" style="font-weight: bold;">Articles</a>
-            </li>
-            <li class="nav-item">
-              <p class="pt-2">|</p>
             </li>
             <li class="nav-item">
               <a class="nav-link text-black px-3" href="musichome.html" style="font-weight: bold;">Music</a>
@@ -67,6 +61,21 @@
       <div class="row p-5 mt-4">
         <h1 style="text-align:center">Music</h1>
         <hr>
+        <div class="col-md-4 mt-4">
+          <div class="wrapping">
+            <button class="musicbtn2" onclick="window.location.href='remember_you.html'" type="button"></button>
+            <div class="try">
+              <a href="remember_you.html" style="text-decoration: none; color:black">
+                <h2 class="title mt-3">Remember You</h2>
+              </a>
+              <a href="remember_you.html" style="text-decoration: none; color:black">
+                <p class="short mx-3">這首是我最喜歡的吉他手-日本的伍伍慧(Satoshi Gogo)的曲子&hellip;</p>
+              </a>
+              <p class="date mx-3 mb-2"><span> Derek Fang</span> | August 21, 2022</p>
+            </div>
+          </div>
+        </div>
+
         <div class="col-md-4 mt-4">
           <div class="wrapping">
             <button class="musicbtn2" onclick="window.location.href='music2.html'" type="button"></button>
