--- a/about/index.html
+++ b/about/index.html
@@ -9,15 +9,15 @@
 <meta name="keywords" content="">
 <meta name="description" content="About - My blog">
 <meta name="author" content="Derek">
-<link rel="canonical" href="KereDs.github.io/about/">
-<link crossorigin="anonymous" href="/KereDs.github.io/assets/css/stylesheet.2291a093bbe7c62c4b07402b7b85c50ae2d11db679d64514615ff03998c228b5.css" integrity="sha256-IpGgk7vnxixLB0Are4XFCuLRHbZ51kUUYV/wOZjCKLU=" rel="preload stylesheet" as="style">
-<script defer crossorigin="anonymous" src="/KereDs.github.io/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js" integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG&#43;9vmJ0cTS&#43;ovo0FeA="
+<link rel="canonical" href="http://kereds.nycu.me/about/">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.2291a093bbe7c62c4b07402b7b85c50ae2d11db679d64514615ff03998c228b5.css" integrity="sha256-IpGgk7vnxixLB0Are4XFCuLRHbZ51kUUYV/wOZjCKLU=" rel="preload stylesheet" as="style">
+<script defer crossorigin="anonymous" src="/assets/js/highlight.f413e19d0714851f6474e7ee9632408e58ac146fbdbe62747134bea2fa3415e0.js" integrity="sha256-9BPhnQcUhR9kdOfuljJAjlisFG&#43;9vmJ0cTS&#43;ovo0FeA="
     onload="hljs.initHighlightingOnLoad();"></script>
-<link rel="icon" href="KereDs.github.io/letterd.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="KereDs.github.io/letterd.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="KereDs.github.io/letterd.ico">
-<link rel="apple-touch-icon" href="KereDs.github.io/letterd.ico">
-<link rel="mask-icon" href="KereDs.github.io/letterd.ico">
+<link rel="icon" href="http://kereds.nycu.me/letterd.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://kereds.nycu.me/letterd.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="http://kereds.nycu.me/letterd.ico">
+<link rel="apple-touch-icon" href="http://kereds.nycu.me/letterd.ico">
+<link rel="mask-icon" href="http://kereds.nycu.me/letterd.ico">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -59,7 +59,7 @@
 </noscript><meta property="og:title" content="About" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="KereDs.github.io/about/" /><meta property="article:section" content="" />
+<meta property="og:url" content="http://kereds.nycu.me/about/" /><meta property="article:section" content="" />
 
 
 
@@ -72,12 +72,12 @@
 {
   "@context": "https://schema.org",
   "@type": "BreadcrumbList",
-  "itemListElement": [, 
+  "itemListElement": [
     {
       "@type": "ListItem",
-      "position":  2 ,
+      "position":  1 ,
       "name": "About",
-      "item": "KereDs.github.io/about/"
+      "item": "http://kereds.nycu.me/about/"
     }
   ]
 }
@@ -103,14 +103,14 @@
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "KereDs.github.io/about/"
+    "@id": "http://kereds.nycu.me/about/"
   },
   "publisher": {
     "@type": "Organization",
     "name": "My blog",
     "logo": {
       "@type": "ImageObject",
-      "url": "KereDs.github.io/letterd.ico"
+      "url": "http://kereds.nycu.me/letterd.ico"
     }
   }
 }
@@ -132,8 +132,8 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="KereDs.github.io" accesskey="h" title="Derek Fang (Alt + H)">
-                <img src="KereDs.github.io/img/d.png" alt="" aria-label="logo"
+            <a href="http://kereds.nycu.me/" accesskey="h" title="Derek Fang (Alt + H)">
+                <img src="http://kereds.nycu.me/img/d.png" alt="" aria-label="logo"
                     height="35">Derek Fang</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
@@ -160,27 +160,27 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="KereDs.github.io/KereDs.github.io/" title="Home">
+                <a href="http://kereds.nycu.me/" title="Home">
                     <span>Home</span>
                 </a>
             </li>
             <li>
-                <a href="KereDs.github.io/posts" title="Posts">
+                <a href="http://kereds.nycu.me/posts" title="Posts">
                     <span>Posts</span>
                 </a>
             </li>
             <li>
-                <a href="KereDs.github.io/categories" title="Categories">
+                <a href="http://kereds.nycu.me/categories" title="Categories">
                     <span>Categories</span>
                 </a>
             </li>
             <li>
-                <a href="KereDs.github.io/about" title="About">
-                    <span>About</span>
+                <a href="http://kereds.nycu.me/about" title="About">
+                    <span class="active">About</span>
                 </a>
             </li>
             <li>
-                <a href="KereDs.github.io/search" title="Search (Alt &#43; /)" accesskey=/>
+                <a href="http://kereds.nycu.me/search" title="Search (Alt &#43; /)" accesskey=/>
                     <span>Search</span>
                 </a>
             </li>
@@ -302,7 +302,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="KereDs.github.io">My blog</a></span>
+    <span>&copy; 2022 <a href="http://kereds.nycu.me/">My blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
