--- a/search/index.html
+++ b/search/index.html
@@ -9,14 +9,14 @@
 <meta name="keywords" content="">
 <meta name="description" content="Search - My blog">
 <meta name="author" content="Derek">
-<link rel="canonical" href="KereDs.github.io/search/">
-<link crossorigin="anonymous" href="/KereDs.github.io/assets/css/stylesheet.2291a093bbe7c62c4b07402b7b85c50ae2d11db679d64514615ff03998c228b5.css" integrity="sha256-IpGgk7vnxixLB0Are4XFCuLRHbZ51kUUYV/wOZjCKLU=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
-<script defer crossorigin="anonymous" src="/KereDs.github.io/assets/js/search.f2c929b23def4bbbd806f51d321b0775e075febe7ad03ac69081f496bb2e30ff.js" integrity="sha256-8skpsj3vS7vYBvUdMhsHdeB1/r560DrGkIH0lrsuMP8="></script>
-<link rel="icon" href="KereDs.github.io/letterd.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="KereDs.github.io/letterd.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="KereDs.github.io/letterd.ico">
-<link rel="apple-touch-icon" href="KereDs.github.io/letterd.ico">
-<link rel="mask-icon" href="KereDs.github.io/letterd.ico">
+<link rel="canonical" href="http://kereds.nycu.me/search/">
+<link crossorigin="anonymous" href="/assets/css/stylesheet.2291a093bbe7c62c4b07402b7b85c50ae2d11db679d64514615ff03998c228b5.css" integrity="sha256-IpGgk7vnxixLB0Are4XFCuLRHbZ51kUUYV/wOZjCKLU=" rel="preload stylesheet" as="style"><link crossorigin="anonymous" rel="preload" as="fetch" href="../index.json">
+<script defer crossorigin="anonymous" src="/assets/js/search.f2c929b23def4bbbd806f51d321b0775e075febe7ad03ac69081f496bb2e30ff.js" integrity="sha256-8skpsj3vS7vYBvUdMhsHdeB1/r560DrGkIH0lrsuMP8="></script>
+<link rel="icon" href="http://kereds.nycu.me/letterd.ico">
+<link rel="icon" type="image/png" sizes="16x16" href="http://kereds.nycu.me/letterd.ico">
+<link rel="icon" type="image/png" sizes="32x32" href="http://kereds.nycu.me/letterd.ico">
+<link rel="apple-touch-icon" href="http://kereds.nycu.me/letterd.ico">
+<link rel="mask-icon" href="http://kereds.nycu.me/letterd.ico">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
 <noscript>
@@ -58,7 +58,7 @@
 </noscript><meta property="og:title" content="Search" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="KereDs.github.io/search/" /><meta property="article:section" content="" />
+<meta property="og:url" content="http://kereds.nycu.me/search/" /><meta property="article:section" content="" />
 
 
 
@@ -71,12 +71,12 @@
 {
   "@context": "https://schema.org",
   "@type": "BreadcrumbList",
-  "itemListElement": [, 
+  "itemListElement": [
     {
       "@type": "ListItem",
-      "position":  2 ,
+      "position":  1 ,
       "name": "Search",
-      "item": "KereDs.github.io/search/"
+      "item": "http://kereds.nycu.me/search/"
     }
   ]
 }
@@ -102,14 +102,14 @@
   },
   "mainEntityOfPage": {
     "@type": "WebPage",
-    "@id": "KereDs.github.io/search/"
+    "@id": "http://kereds.nycu.me/search/"
   },
   "publisher": {
     "@type": "Organization",
     "name": "My blog",
     "logo": {
       "@type": "ImageObject",
-      "url": "KereDs.github.io/letterd.ico"
+      "url": "http://kereds.nycu.me/letterd.ico"
     }
   }
 }
@@ -131,8 +131,8 @@
 <header class="header">
     <nav class="nav">
         <div class="logo">
-            <a href="KereDs.github.io" accesskey="h" title="Derek Fang (Alt + H)">
-                <img src="KereDs.github.io/img/d.png" alt="" aria-label="logo"
+            <a href="http://kereds.nycu.me/" accesskey="h" title="Derek Fang (Alt + H)">
+                <img src="http://kereds.nycu.me/img/d.png" alt="" aria-label="logo"
                     height="35">Derek Fang</a>
             <div class="logo-switches">
                 <button id="theme-toggle" accesskey="t" title="(Alt + T)">
@@ -159,28 +159,28 @@
         </div>
         <ul id="menu">
             <li>
-                <a href="KereDs.github.io/KereDs.github.io/" title="Home">
+                <a href="http://kereds.nycu.me/" title="Home">
                     <span>Home</span>
                 </a>
             </li>
             <li>
-                <a href="KereDs.github.io/posts" title="Posts">
+                <a href="http://kereds.nycu.me/posts" title="Posts">
                     <span>Posts</span>
                 </a>
             </li>
             <li>
-                <a href="KereDs.github.io/categories" title="Categories">
+                <a href="http://kereds.nycu.me/categories" title="Categories">
                     <span>Categories</span>
                 </a>
             </li>
             <li>
-                <a href="KereDs.github.io/about" title="About">
+                <a href="http://kereds.nycu.me/about" title="About">
                     <span>About</span>
                 </a>
             </li>
             <li>
-                <a href="KereDs.github.io/search" title="Search (Alt &#43; /)" accesskey=/>
-                    <span>Search</span>
+                <a href="http://kereds.nycu.me/search" title="Search (Alt &#43; /)" accesskey=/>
+                    <span class="active">Search</span>
                 </a>
             </li>
         </ul>
@@ -206,7 +206,7 @@
     </main>
     
 <footer class="footer">
-    <span>&copy; 2022 <a href="KereDs.github.io">My blog</a></span>
+    <span>&copy; 2022 <a href="http://kereds.nycu.me/">My blog</a></span>
     <span>
         Powered by
         <a href="https://gohugo.io/" rel="noopener noreferrer" target="_blank">Hugo</a> &
